fix spacing on offscreen letters. Add backgrounds

--- a/src/App.css
+++ b/src/App.css
@@ -34,11 +34,7 @@ button, input {
   cursor: pointer;
 }
 .stripe.selected {
-  height: 80%;
   cursor: initial;
-}
-.stripe.small {
-  height: calc(20% / 8);
 }
 .stripe:nth-of-type(odd) {
   background: rgba(0,0,0,.03);
@@ -83,11 +79,14 @@ button, input {
   position: absolute;
   width: 100%;
   height: 100%;
-  transition: 500ms opacity ease;
-  opacity: 0;
+  opacity: 0.2;
+}
+.stripe .background {
+  transition: 500ms all ease;
+  filter: blur(0px) contrast(1) saturate();
 }
 .stripe.selected .background {
-  opacity: .2;
+  filter: blur(5px) contrast(0.3) saturate(0.2);
 }
 
 .inner {
